added some misssing code (nees refactoring)

--- a/notebooks/data_preparation.ipynb
+++ b/notebooks/data_preparation.ipynb
@@ -9282,6 +9282,95 @@
     "# calculate number of images in each category and image_type\n",
     "df.groupby(['category', 'image_type']).size()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the CSV file\n",
+    "df = pd.read_csv('/home/boukhari/projects/dental_image_project/data/raw/dental_images.csv')\n",
+    "\n",
+    "# Remove the [U+200E] character (LRM) and any surrounding whitespace\n",
+    "df['file_name'] = df['file_name'].str.replace('\\u200e', '').str.strip()\n",
+    "\n",
+    "# Update the value where file_name matches 'IMG_C2_000163.jpg'\n",
+    "df.loc[df['file_name'] == 'IMG_C2_000163.jpg', 'image_type'] = 'xray'\n",
+    "\n",
+    "# Save the changes back to the CSV file\n",
+    "df.to_csv('/home/boukhari/projects/dental_image_project/data/raw/dental_images.csv', index=False)\n",
+    "\n",
+    "# Check if the update was successful\n",
+    "print(df[df['file_name'] == 'IMG_C2_000163.jpg'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "# Define paths\n",
+    "csv_file_path = '/home/boukhari/projects/dental_image_project/data/raw/dental_images.csv'\n",
+    "image_directory_path = '/home/boukhari/projects/dental_image_project/data/raw/all_images'  # Update this to your actual directory\n",
+    "\n",
+    "# Load the CSV file\n",
+    "df = pd.read_csv(csv_file_path)\n",
+    "\n",
+    "# Extract the list of image names from the CSV\n",
+    "image_names = df['file_name']  \n",
+    "# Get the list of files in the directory\n",
+    "existing_files = set(os.listdir(image_directory_path))\n",
+    "\n",
+    "# Check if each image name in the CSV exists in the directory\n",
+    "missing_files = [image_name for image_name in image_names if image_name not in existing_files]\n",
+    "\n",
+    "# Output results\n",
+    "if missing_files:\n",
+    "    print(\"The following files are missing from the directory:\")\n",
+    "    for missing_file in missing_files:\n",
+    "        print(missing_file)\n",
+    "else:\n",
+    "    print(\"All files listed in the CSV are present in the directory.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Define the directory containing the images\n",
+    "directory_path = '/home/boukhari/projects/dental_image_project/data/raw/all_images'  # Update this to your actual directory\n",
+    "\n",
+    "# Define the invisible character to remove\n",
+    "invisible_char = '\\u200e'  # Left-to-Right Mark (LRM)\n",
+    "\n",
+    "# Iterate over all files in the directory\n",
+    "for filename in os.listdir(directory_path):\n",
+    "    # Check if the filename contains the invisible character\n",
+    "    if invisible_char in filename:\n",
+    "        # Construct the new filename by removing the invisible character\n",
+    "        new_filename = filename.replace(invisible_char, '')\n",
+    "        \n",
+    "        # Construct full file paths\n",
+    "        old_file_path = os.path.join(directory_path, filename)\n",
+    "        new_file_path = os.path.join(directory_path, new_filename)\n",
+    "        \n",
+    "        # Rename the file\n",
+    "        os.rename(old_file_path, new_file_path)\n",
+    "        print(f\"Renamed: {filename} -> {new_filename}\")\n",
+    "\n",
+    "print(\"All files have been processed.\")\n"
+   ]
   }
  ],
  "metadata": {
